<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) <2024>  <gitofleonardo>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="touch_indicator_desc">TouchIndicator</string>
    <string name="sample_text">Hello world</string>
    <string name="long_sample_text">Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.Hello world.</string>
    <string name="title_basic_view">Basics</string>
    <string name="title_context">Context</string>
    <string name="title_class">Class</string>
    <string name="title_children">Children</string>
    <string name="title_visibility">Visibility</string>
    <string name="title_width">Width</string>
    <string name="title_height">Height</string>
    <string name="title_padding">Padding-L-T-R-B</string>
    <string name="title_margin">Margin-L-T-R-B</string>
    <string name="view_size_hint">-1 for match_parent, -2 for wrap_content</string>
    <string name="view_ltrb_format_hint">Format: [left,top,right,bottom]</string>
    <string name="title_text_view">TextView</string>
    <string name="title_text_input">Text</string>
    <string name="summary_text_input">Notes: All span info will be lost.</string>
    <string name="title_text_size_input">Text Size</string>
    <string name="title_text_max_lines_input">Max Lines</string>
    <string name="title_image_view">ImageView</string>
    <string name="image_view_hint">Only supports http/https url now.</string>
    <string name="title_image_url">Image Url</string>
    <string name="title_image_scale_type">Scale Type</string>
</resources>