<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) <2024>  <gitofleonardo>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/display_card_background"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <com.hhvvg.libinject.view.PreviewView
            android:id="@+id/preview_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/remove_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/ic_remove_circle_24"
            android:tint="?attr/colorError"
            app:layout_constraintBottom_toBottomOf="@id/preview_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/preview_item"
            tools:ignore="UseAppTint" />

        <ImageView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/parent_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:tint="?attr/colorPrimary"
            android:src="@drawable/ic_arrow_circle_up_24"
            app:layout_constraintBottom_toBottomOf="@id/preview_item"
            app:layout_constraintEnd_toStartOf="@id/remove_view"
            app:layout_constraintTop_toTopOf="@id/preview_item"
            tools:ignore="UseAppTint" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.PreferenceView
        android:id="@+id/view_class_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sample_text"
        app:preference_title="@string/title_class" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.PreferenceView
        android:id="@+id/context_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sample_text"
        app:preference_title="@string/title_context" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_children_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorSurface"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="@dimen/preference_title_width"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/title_children"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hhvvg.libinject.view.PreviewList
            android:id="@+id/preview_children"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
            android:id="@+id/page_indicator"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:dotCount="3"
            app:layout_constraintEnd_toEndOf="@id/preview_children"
            app:layout_constraintStart_toStartOf="@id/preview_children"
            app:layout_constraintTop_toBottomOf="@id/preview_children"
            app:selectedDotColor="@color/color_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.OptionsPreferenceView
        android:id="@+id/visibility_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:preference_options="@array/visibility_array"
        app:preference_title="@string/title_visibility" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.InputPreferenceView
        android:id="@+id/width_input_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        app:preference_summary="@string/view_size_hint"
        app:preference_title="@string/title_width" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.InputPreferenceView
        android:id="@+id/height_input_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        app:preference_summary="@string/view_size_hint"
        app:preference_title="@string/title_height" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.InputPreferenceView
        android:id="@+id/padding_ltrb_input_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:preference_summary="@string/view_ltrb_format_hint"
        app:preference_title="@string/title_padding" />

    <View
        android:id="@+id/divider_margin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorSurface" />

    <com.hhvvg.libinject.view.preference.InputPreferenceView
        android:id="@+id/margin_ltrb_input_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:preference_summary="@string/view_ltrb_format_hint"
        app:preference_title="@string/title_margin" />
</LinearLayout>